@define no longer implicitly binds into the top-level.
@const no longer exists
the functions defined by @record are bound to the innermost scope,
  unless there are already bindings
veclen no longer exists (use always-equivalent length)