@@ -483,7 +483,7 @@ Variables declared with
 <span class="id">@local</span>
 and
 <span class="id">@global</span>
-are initially bound to the undefined value.
+are initially bound to <tt>nil</tt>.
 </p>
 
 <p>
