@@ -3,3 +3,5 @@
 the functions defined by @record are bound to the innermost scope,
   unless there are already bindings
 veclen no longer exists (use always-equivalent length)
+variables declared with @global and @local are initialize bound to nil
+  (previously they were bound to the undefined value)
